frontend implement resetPassword and forgetPassword

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET = JAAKARAMAASRPKKMABAR
 DB_URI = mongodb://127.0.0.1:27017/Auth-App
+EMAIL = sayeda7080@gmail.com
+PASSWORD = 4A96B1002C3A00575B8754111F9841731819
